<resources>
    <string name="app_name">Diary</string>
    <string name="guide_line">A collection of notes from your life.</string>
    <string name="version">v4.89</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="action_delete">Delete</string>
    <string name="alert_empty_note">Save empty note?</string>
    <string name="cancel">Cancel</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="saving">Saving...</string>
    <string name="write_note">Write note</string>
    <string name="view_note">View note</string>
    <string name="share_note">Share note</string>
    <string name="delete_note">Delete note</string>
    <string name="action_search">Search</string>
    <string name="close">Close</string>
    <string name="all">All</string>
    <string name="save_change">Save changes</string>
    <string name="matches">matches</string>
    <string name="share_using">Share using</string>
    <string name="diary_note">A diary note</string>
    <string name="date">Date</string>
    <string name="title">Title</string>
    <string name="subject">Subject</string>
    <string name="ask_delete">Delete note?</string>
    <string name="signal_share">Shared using: https://www.writediary.com/getapp</string>
    <string name="account">Account</string>
    <string name="codelock">Codelock</string>
    <string name="color_and_style">Color and style</string>
    <string name="reminder">Reminder</string>
    <string name="export">Export</string>
    <string name="rate_review">Rate and review</string>
    <string name="recommend_frend">Recommended to a friend</string>
    <string name="visit_facebook">Visit us on Facebook</string>
    <string name="feedback">Feedback</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="guide_lock">Use code lock to protect your diary</string>
    <string name="ok">OK</string>
    <string name="save">Save</string>
    <string name="email_recovey">Email (for recovery only)</string>
    <string name="repeat_email">Repeat email</string>
    <string name="enter_code">Enter code</string>
    <string name="unlock">Unlock</string>
    <string name="forgot_code">Forgot code?</string>
    <string name="mandatory">Mandatory</string>
    <string name="does_not_match">Does not match</string>
    <string name="incorrect_code">Incorrect code</string>
    <string name="deactive">Deactive</string>
    <string name="start_typing_here">Starting type here</string>
    <string name="theme">Theme</string>
    <string name="text_style">Text style</string>
    <string name="poem_lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquid ex ea commodi consequat. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </string>
    <string name="lines">Lines</string>
    <string name="date_style">Date style</string>
    <string name="short_cut">Shortcut</string>
    <string name="add_shortcut">The icon was added to your home screen.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="codelock_activated">Codelock activated</string>
    <string name="codelock_deactivated">Codelock deactivated</string>
    <string name="codelock_setup">Codelock setup</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in_existing_account">Sign in to existing account</string>
    <string name="connect_with_the_cloud">Connect with the Cloud</string>
    <string name="sync_with_other_devices">Sync with other devices.</string>
    <string name="restore_notes">Restore notes.</string>
    <string name="benefit_guide">Easily restore your notes from the cloud if your device is lost, stolen, factory reset, etc.</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_to_account">Sign in to account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="offline">Offline</string>
    <string name="no_internet_connection">No internet connection.</string>
    <string name="could_not_connect">Could not connect to the cloud server.</string>
    <string name="check_your_connection">Check your internet connection.</string>
    <string name="invalid_login">Invalid login</string>
    <string name="if_you_fogot_password">If you have forgotten the account password, use the forgot password feature.</string>
    <string name="reset_now">Reset now</string>
    <string name="enter_account_email">Enter account email address</string>
    <string name="reset_password">Reset password</string>
    <string name="error">Error</string>
    <string name="email_not_verify">Email not verify</string>
    <string name="avoid_email_spam">To avoid email abuse and spam, all emails must be verified by send an email to verify@writediary.com</string>
    <string name="verify_now">Verify now</string>
    <string name="reminder_setup">Reminder setup</string>
    <string name="reminder_guide">We all know how easy it can be to forget sometimes. Help yourself to remember to update your diary.</string>
    <string name="how_do_you_feel">How do you feel about WriteDiary?</string>
    <string name="action_help">Help</string>
    <string name="create_cloud_account">Create cloud account</string>
    <string name="repeat_password">Repeat password</string>
    <string name="accept_terms_of_service">I accept the Terms Of Service</string>
    <string name="read_terms_of_service">Read our Terms Of Service</string>
    <string name="create_account">Create account</string>
    <string name="too_short">Too short</string>
    <string name="connected">Connected!</string>
    <string name="entries_will_synce">Your entries will now be synced to your cloud account.</string>
    <string name="forgot_account_password">If you have forgotten the account password, use the forgot password feature.</string>
    <string name="account_not_found">Account not found</string>
    <string name="account_does_not_exists">Account does not exists.</string>
    <string name="tos_must_accept">Terms Of Service must be accepted.</string>
    <string name="account_exists">Account already exists</string>
    <string name="some_error_occur">Some error occur</string>
    <string name="oh_no">Oh no!</string>
    <string name="take_a_look">Take a look at \"Diary with lock\"</string>
    <string name="cloud_account">Cloud account</string>
    <string name="sync_only_wify">Sync only via Wify</string>
    <string name="change_password">Change password</string>
    <string name="sign_out">Sign out</string>
    <string name="terminate_acc">Terminate account</string>
    <string name="connecting_to_cloud">Connecting to cloud...</string>
    <string name="sign_out_guide">When disconnected, cloud syncing will stop, Any changes will only be stored on this devices.</string>
    <string name="disconnected">Disconnected?</string>
    <string name="disconnected_guide">From now on, changes will only be saved on this device.</string>
    <string name="web_page">WriteDiary.com</string>
    <string name="number_of_notes">Number of notes</string>
    <string name="export_all_entries">Export all entries</string>
    <string name="export_guide">Create an extra copy of all entries, and store them in an external app or space.</string>
    <string name="export_now">Export now</string>
    <string name="complete_action_using">Complete action using</string>
    <string name="no_reminder">No reminder (disabled)</string>
    <string name="daily">Daily</string>
    <string name="days">days</string>
    <string name="new_password">New password</string>
    <string name="type_your_new_password">Type your new password</string>
    <string name="password_updated">Password updated!</string>
    <string name="update_password_guide">If you have othe devices connected to this account, you need to reconnect them using the new password to make sync work.</string>
    <string name="warning">Warning!</string>
    <string name="confirm_termination">I confirm the termination</string>
    <string name="terminate_guide">This will be close and terminate your diary cloud account and delete all notes stored in it.</string>
    <string name="not_revert">Operation can not be reverted.</string>
    <string name="termination_not_confirm">Termination not confirm</string>
    <string name="account_terminated">Account terminated</string>
    <string name="account_deleted">Your cloud account is now deleted.</string>
    <string name="account_deleted_2">From now on, changes will only be saved on this device.</string>
    <string name="reset_password_guide">We have sent you instructions to reset your password!</string>
</resources>
