<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_add"
        android:icon="@drawable/checkmark_filled"
        android:title="@string/action_settings"
        app:showAsAction="always" />
    <item
        android:icon="@drawable/menu_option"
        android:title="@string/action_settings"
        app:showAsAction="always">

        <menu>
            <item
                android:id="@+id/action_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/action_share"
                app:showAsAction="never" />
            <item
                android:id="@+id/action_delete"
                android:icon="@drawable/trash"
                android:title="@string/action_delete"
                app:showAsAction="never" />
            <!--<item-->
                <!--android:id="@+id/action_emoji"-->
                <!--android:icon="@drawable/emoji"-->
                <!--android:title="@string/action_settings"-->
                <!--app:showAsAction="never" />-->
        </menu>
    </item>
</menu>