<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/dialog_width"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/tvView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/action_bar_size"
        android:gravity="center_vertical"
        android:text="@string/view_note"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_16" />
    <TextView
        android:id="@+id/tvShare"
        android:layout_width="match_parent"
        android:layout_height="@dimen/action_bar_size"
        android:gravity="center_vertical"
        android:text="@string/share_note"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_16" />

    <TextView
        android:id="@+id/tvDelete"
        android:layout_width="match_parent"
        android:layout_height="@dimen/action_bar_size"
        android:gravity="center_vertical"
        android:text="@string/delete_note"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_16" />

</LinearLayout>