<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/dialog_width"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/action_bar_size"
        android:gravity="center_vertical"
        android:text="@string/save_change"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_16"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/action_bar_size"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">


            <TextView
                android:id="@+id/tvCancel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/cancel"
                android:textAllCaps="true"
                android:textColor="@color/colorLightBlue"
                android:textSize="@dimen/text_size_15"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/tvNo"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                android:gravity="center"
                android:text="@string/no"
                android:textAllCaps="true"
                android:textColor="@color/colorLightBlue"
                android:textSize="@dimen/text_size_15"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvYes"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                android:gravity="center"
                android:text="@string/yes"
                android:textAllCaps="true"
                android:textColor="@color/colorLightBlue"
                android:textSize="@dimen/text_size_15"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>