<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDefault"
    android:orientation="vertical"
    tools:context=".activity.ExportActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_weight="1"
            app:title="@string/account"
            app:titleTextColor="@color/colorWhite" />

    </android.support.design.widget.AppBarLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="right"
        android:layout_weight="1.5"
        android:gravity="right"
        android:src="@drawable/export_icon" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center"
        android:text="@string/export_all_entries"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_size_20"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/margin_medium"
        android:layout_marginRight="@dimen/margin_medium"
        android:layout_weight="2"
        android:gravity="center"
        android:text="@string/export_guide"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_size_15" />


    <Button
        android:id="@+id/btnExport"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_save_height"
        android:layout_alignParentBottom="true"
        android:alpha="0.8"
        android:background="@color/brownAccount"
        android:text="@string/export_now"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_size_15"
        android:textStyle="bold" />
</LinearLayout>