<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutPassword"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDefault"
    android:orientation="vertical"
    tools:context="example.com.hb.diary.activity.PasswordActivity">


    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:title="@string/codelock"
            app:titleTextColor="@color/colorWhite" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dimen_130"
        android:layout_gravity="center"
        android:gravity="center">

        <ImageView
            android:layout_width="@dimen/width_80"
            android:layout_height="@dimen/width_80"
            android:layout_gravity="center"
            android:src="@drawable/icon_lock" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/guide_lock"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_size_14" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_30"
                android:background="@drawable/border_edittext"
                android:orientation="vertical"
                android:paddingLeft="@dimen/margin_small"
                android:paddingRight="@dimen/margin_small">

                <LinearLayout
                    style="@style/LinearLayoutInputPassword"
                    android:layout_margin="0dp">

                    <ImageView
                        style="@style/ImageViewInInputPasswordField"
                        android:src="@drawable/code" />

                    <EditText
                        android:id="@+id/edtEnterCode"
                        style="@style/EdittextPasswordActivity"
                        android:hint="@string/enter_code"
                        android:inputType="textPassword" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/blackNavigation" />

                <LinearLayout
                    style="@style/LinearLayoutInputPassword"
                    android:layout_margin="0dp">

                    <ImageView
                        style="@style/ImageViewInInputPasswordField"
                        android:src="@drawable/email" />

                    <EditText
                        android:id="@+id/edtEmail"
                        style="@style/EdittextPasswordActivity"
                        android:inputType="textEmailAddress"
                        android:hint="@string/email_recovey" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/blackNavigation" />

                <LinearLayout
                    style="@style/LinearLayoutInputPassword"
                    android:layout_margin="0dp">

                    <ImageView
                        style="@style/ImageViewInInputPasswordField"
                        android:src="@drawable/email" />

                    <EditText
                        android:id="@+id/edtRepeatEmail"
                        style="@style/EdittextPasswordActivity"
                        android:inputType="textEmailAddress"
                        android:hint="@string/repeat_email" />

                </LinearLayout>
            </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnSavePassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_save_height"
            android:alpha="0.8"
            android:background="@color/brownAccount"
            android:text="@string/save"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_size_15"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/llDeactive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <Button
                android:id="@+id/btnDeactive"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_deactive"
                android:alpha="0.8"
                android:background="@color/brownAccount"
                android:text="@string/deactive"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_size_12"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>
